--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "Helps you focus and get things done!",
     "permissions": ["activeTab", "storage"],
     "browser_action":{
-        "default_popup": "popup.html",
+        "default_popup": "popup/popup.html",
         "default_icon":{
             "16": "logo.png",
             "48": "logo.png",
