--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,27 @@
 {
-    "manifest_version": 2,
-    "name": "Stay Productive",
+    "manifest_version": 3,
+    "name": "Pomodoro Timer",
     "version": "1.0",
-    "description": "Helps you focus and get things done!",
-    "permissions": ["activeTab", "storage"],
-    "browser_action":{
-        "default_popup": "popup/popup.html",
-        "default_icon":{
-            "16": "logo.png",
-            "48": "logo.png",
-            "128": "logo.png"
+    "description": "A Chrome extension for your Pomodoro timer.",
+    "permissions": ["storage"],
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "images/logo.png",
+            "48": "images/logo.png",
+            "128": "images/logo.png"
         }
     },
-
+    "icons": {
+        "16": "images/logo.png",
+        "48": "images/logo.png",
+        "128":"images/logo.png"
+    },
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
+    },
     "background": {
-        "scripts": ["background.js"],
-        "persistent": false
-    },
-
-    "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["content.js"]
-        }
-    ],
-
-    "icons":{
-        "16": "logo.png",
-        "48": "logo.png",
-        "128": "logo.png"
+        "service_worker": "background.js"
     }
-    
 }
 
